2024-13-08: Hugo Melder <hugo@algoriddim.com>

	* Source/NSOperation.m:
	* Headers/Foundation/NSOperation.h:
	Give NSOperationQueue worker threads a proper thread
	name for easy identification.

2024-12-08 Hugo Melder <hugo@algoriddim.com>
	* Source/NSThread.m:
	Fix threadPriority and setThreadPriority: on Android.

2024-08-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.m:
	Add protocols to the graphing.

2024-08-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/AGSHtml.m:
	* Tools/GNUmakefile:
	* config.mak.in:
	* configure.ac:
	* configure:
	Preliminary changes add inheritance diagrams to class documentation.
	Uses the graphviz 'dot' tool if it is available at configure time.
	Just draws class/superclass relationship for now.
	Should add protocols and prettify boxes later.

2024-07-25 Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSHashTable.h:
	* Headers/Foundation/NSMapTable.h:
	* Headers/Foundation/NSPointerArray.h:
	* Headers/Foundation/NSPointerFunctions.h:
	* Headers/Foundation/NSZone.h:
	* Headers/GNUstepBase/config.h.in:
	* Source/GSSocketStream.m:
	* Source/GSStream.m:
	* Source/NSConcreteHashTable.m:
	* Source/NSConcreteMapTable.m:
	* Source/NSConcretePointerFunctions.h:
	* Source/NSConcretePointerFunctions.m:
	* Source/NSConnection.m:
	* Source/NSHashTable.m:
	* Source/NSKeyedArchiver.m:
	* Source/NSKeyedUnarchiver.m:
	* Source/NSKeyValueObserving.m:
	* Source/NSMapTable.m:
	* Source/NSPointerArray.m:
	* Source/NSPort.m:
	* Source/NSZone.m:
	* Tests/base/NSHashTable/create.m:
	* Tests/base/NSHashTable/weakObjects.m:
	* Tests/base/NSIndexSet/enumerateRanges.m:
	* Tests/base/NSMapTable/create.m:
	* Tests/base/NSMapTable/weakObjects.m:
	* Tests/base/NSPointerArray/weakObjects.m:
	* Tests/base/NSPointerFunctions/basic.m:
	* Tests/base/NSPointerFunctions/general.m:
	* Tests/base/NSPointerFunctions/TestInfo:
	General fixups for pointer functions, removing obsolete (non-working)